<resources>
    <string name="personalization_partner_tag">com_samsung_t0</string>
    <string name="personalization_server_base_url">https://samsung-personalization.touchtype-fluency.com</string>
    <string name="personalization_server_delete_url">https://samsung-personalisation-delete.touchtype-fluency.com</string>
    <string name="google_auth_client_id">264543920471</string>
    <string name="google_auth_redirect_uri">http://www.swiftkey.net/login_success.html</string>
    <string name="google_auth_scope">https://mail.google.com https://www.googleapis.com/auth/userinfo.email</string>
    <string name="google_auth_access_token_url">https://accounts.google.com/o/oauth2/auth?scope=</string>
    <string name="facebook_oauth_url">https://www.facebook.com/dialog/oauth?client_id=</string>
    <string name="app_name">Samsung keyboard</string>
    <string name="app_subtype">Multiple languages</string>
    <string name="deleted">%d deleted.</string>
    <string name="undo">Undo</string>
    <string name="preload_language">Cannot delete preloaded languages.</string>
    <string name="checked_language">Unable to delete language while in use. To delete, deselect tickbox.</string>
    <string name="key_label_enter_delete">Delete</string>
    <string name="key_label_enter_go">Go</string>
    <string name="key_label_enter_next">Next</string>
    <string name="key_label_enter_send">Send</string>
    <string name="key_label_enter_done">Done</string>
    <string name="input_method_type">Portrait keyboard types</string>
    <string name="input_method_type_qwerty">Qwerty keyboard</string>
    <string name="input_method_type_phonepad">3x4 keyboard</string>
    <string name="input_method_type_box_hwr">Handwriting</string>
    <string name="input_method_type_normal">Normal</string>
    <string name="use_input_method_type_on_kor">Set Korean keyboard separately</string>
    <string name="korean_keypad_type">Korean keyboard</string>
    <string name="korean_keypad_type_cji">Chunjiin keyboard</string>
    <string name="korean_keypad_type_cji_turbo">Chunjiin plus keyboard</string>
    <string name="korean_keypad_type_vega">Vega keyboard</string>
    <string name="korean_keypad_type_nara">Naratgul keyboard</string>
    <string name="korean_keypad_type_off_toast">To see advanced options, enable korean keyboard separately</string>
    <string name="number_and_symbols_keypad_type">Numbers and symbols</string>
    <string name="alphabets_keypad_type">Alphabets</string>
    <string name="keyboard_dependent_symbols_keyboard_type">Language dependent</string>
    <string name="general_settings">General settings</string>
    <string name="select_language">Input language</string>
    <string name="select_languages">Input languages</string>
    <string name="settings_navigate_up">Navigate up</string>
    <string name="umlaut_settings">Umlaut settings</string>
    <string name="setting_title">Samsung keyboard settings</string>
    <string name="use_xt9">Predictive text</string>
    <string name="predictive_text_on">On</string>
    <string name="predictive_text_off">Off</string>
    <string name="predictive_text_summary">Show predicted text for easier and more accurate text input. The device will learn your writing style and update words every week.</string>
    <string name="s_fuzzy_option_title">Fuzzy settings</string>
    <string name="s_zequalzh_key">CHINESE_FUZZY_ZEQUALZH</string>
    <string name="s_cequalch_key">CHINESE_FUZZY_CEQUALCH</string>
    <string name="s_sequalsh_key">CHINESE_FUZZY_SEQUALSH</string>
    <string name="s_fequalh_key">CHINESE_FUZZY_FEQUALH</string>
    <string name="s_lequaln_key">CHINESE_FUZZY_LEQUALN</string>
    <string name="s_lequalr_key">CHINESE_FUZZY_LEQUALR</string>
    <string name="s_ianequaliang_key">CHINESE_FUZZY_IANEQUALIANG</string>
    <string name="s_uanequaluang_key">CHINESE_FUZZY_UANEQUALUANG</string>
    <string name="s_anequalang_key">CHINESE_FUZZY_ANEQUALANG</string>
    <string name="s_enequaleng_key">CHINESE_FUZZY_ENEQUALENG</string>
    <string name="s_inequaling_key">CHINESE_FUZZY_INEQUALING</string>
    <string name="s_kequalg_key">CHINESE_FUZZY_KEQUALG</string>
    <string name="s_lequalh_key">CHINESE_FUZZY_LEQUALH</string>
    <string name="s_zequalzh">z=zh</string>
    <string name="s_cequalch">c=ch</string>
    <string name="s_sequalsh">s=sh</string>
    <string name="s_fequalh">f=h</string>
    <string name="s_lequaln">l=n</string>
    <string name="s_lequalr">l=r</string>
    <string name="s_ianequaliang">ian=iang</string>
    <string name="s_uanequaluang">uan=uang</string>
    <string name="s_anequalang">an=ang</string>
    <string name="s_enequaleng">en=eng</string>
    <string name="s_inequaling">in=ing</string>
    <string name="s_kequalg">k=g</string>
    <string name="s_lequalh">l=h</string>
    <string name="xt9_advanced_off_toast">To see more options, enable predictive text</string>
    <string name="use_keypad_sweeping">Keyboard swipe</string>
    <string name="keypad_sweeping_summary">Swipe keyboard horizontally to switch between letters and symbols</string>
    <string name="use_char_preview">Character preview</string>
    <string name="use_char_preview_summary">Show a big character bubble when a key on a Qwerty keyboard is tapped.</string>
    <string name="use_auto_spacing">Auto spacing</string>
    <string name="auto_spacing_summary">Automatically insert spaces between words.</string>
    <string name="auto_spacing_summary_to_enable_predictive_text">Enable Predictive text to use Auto Spacing</string>
    <string name="use_auto_period">Auto punctuate</string>
    <string name="auto_period_summary">Insert a full stop followed by a space automatically by tapping the space bar twice.</string>
    <string name="use_keypress_sound">Key-tap sound</string>
    <string name="use_keypress_haptic">Key-tap vibration</string>
    <string name="use_auto_caps">Auto capitalise</string>
    <string name="use_auto_caps_description">Auto capitalise</string>
    <string name="auto_caps_summary">Automatically capitalise the first letter of each sentence.</string>
    <string name="use_voice_input">Voice input</string>
    <string name="voice_input_summary">Show voice entry button on keyboard</string>
    <string name="hwr_off_toast">To see advanced options, enable handwriting</string>
    <string name="tutorial">Tutorial</string>
    <string name="reset_settings">Reset settings</string>
    <string name="preview_toast">천지인, 천지인 플러스에서는 동작하지 않습니다.</string>
    <string name="help_integration">Help</string>
    <string name="use_word_completion">Word completion</string>
    <string name="default_umlaut_a">àáâãäåæāăą</string>
    <string name="default_umlaut_b" />
    <string name="default_umlaut_c">çćč</string>
    <string name="default_umlaut_d">ďđð</string>
    <string name="default_umlaut_e">èéêëēėęěĕə</string>
    <string name="default_umlaut_f" />
    <string name="default_umlaut_g">ģğ</string>
    <string name="default_umlaut_h" />
    <string name="default_umlaut_i">ìíîïīįı</string>
    <string name="default_umlaut_j" />
    <string name="default_umlaut_k">ķ</string>
    <string name="default_umlaut_l">ĺļľł</string>
    <string name="default_umlaut_m" />
    <string name="default_umlaut_n">ñńņňŉ</string>
    <string name="default_umlaut_o">òóôõöøőœ</string>
    <string name="default_umlaut_p" />
    <string name="default_umlaut_q" />
    <string name="default_umlaut_r">ŕř</string>
    <string name="default_umlaut_s">ß§śšş</string>
    <string name="default_umlaut_t">þťțţ</string>
    <string name="default_umlaut_u">ùúûüūůűų</string>
    <string name="default_umlaut_v" />
    <string name="default_umlaut_w" />
    <string name="default_umlaut_x" />
    <string name="default_umlaut_y">ý</string>
    <string name="default_umlaut_z">źżž</string>
    <string name="personalization_title">Personalisation</string>
    <string name="personalize_messaging_title">Learn from Messages</string>
    <string name="personalize_contacts_title">Learn from Contacts</string>
    <string name="personalize_messaging_subtitle">Allow the device to learn your writing style from your messages.</string>
    <string name="personalize_contacts_subtitle">Allow the device to use the information saved in Contacts.</string>
    <string name="use_auto_correction">Auto replace</string>
    <string name="use_auto_correction_summary">Complete or replace the word you are typing with the most probable word when you tap the space bar or a punctuation mark.</string>
    <string name="use_live_language">Live word update</string>
    <string name="use_live_language_summary">Set your device to update your predictive text with popular new words every week.</string>
    <string name="use_standard_data">Personalised data</string>
    <string name="use_standard_data_summary">Set your device to use the personal language data you have entered to improve your prediction results.</string>
    <string name="use_emoji_suggestions">Emoji Suggestions</string>
    <string name="use_emoji_suggestions_summary">Set your device to suggest emojis based on the characters you have entered.</string>
    <string name="pref_delete_dynamic_title">Clear personalised data</string>
    <string name="pref_delete_dynamic_summary">Clear all personalised language data collected to learn your writing style.</string>
    <string name="pref_delete_dynamic_dialog_title">If you delete your personal data, it will no longer be available in Samsung keyboard.</string>
    <string name="pref_delete_dynamic_dialog_cancel">Cancel</string>
    <string name="pref_personalize_sources_category_key">pref_personalize_sources_category_key</string>
    <string name="setting_category_enhanced_prediction">Enhanced prediction</string>
    <string name="setting_db_update_title">Update word database</string>
    <string name="setting_fuzzy_pinyin_input_title">Fuzzy Pinyin Input</string>
    <string name="setting_cloud_input_title">Cloud input by Sogou</string>
    <string name="setting_cloud_network_wlan">Use only when connected via WLAN</string>
    <string name="setting_chn_eng_mixed_summary">Show English characters as well when Chinese characters are entered.</string>
    <string name="setting_chn_eng_mixed_title">Chinese/English mixed input</string>
    <string name="setting_link_to_contacts_summary">Show predicted contacts that start with the characters just tapped. Tap and hold a contact to view their information.</string>
    <string name="setting_link_to_contacts_title">Link to contacts</string>
    <string name="setting_fuzzy_pinyin_ang_an_title">ang = an</string>
    <string name="setting_fuzzy_pinyin_ch_c_title">ch = c</string>
    <string name="setting_fuzzy_pinyin_eng_en_title">eng = en</string>
    <string name="setting_fuzzy_pinyin_h_f_title">h = f</string>
    <string name="setting_fuzzy_pinyin_ing_in_title">ing = in</string>
    <string name="setting_fuzzy_pinyin_n_l_title">n = l</string>
    <string name="setting_fuzzy_pinyin_r_l_title">r = l</string>
    <string name="setting_fuzzy_pinyin_sh_s_title">sh = s</string>
    <string name="setting_fuzzy_pinyin_zh_z_title">zh = z</string>
    <string name="setting_db_update_auto_wlan_summary">Check for updates automatically and download them using WLAN only.</string>
    <string name="setting_db_update_auto_wlan_title">Auto update via WLAN only</string>
    <string name="setting_db_update_available_title">Available word databases</string>
    <string name="setting_db_update_download_title">Installed word databases</string>
    <string name="setting_db_update_setting">Database update settings</string>
    <string name="setting_db_update_auto_wlan_key">setting_db_update_auto_wlan_key</string>
    <string name="setting_db_update_available_key">setting_db_update_available_key</string>
    <string name="setting_db_update_download_key">setting_db_update_download_key</string>
    <string name="setting_db_update_key">setting_db_update_key</string>
</resources>