<?xml version="1.0" encoding="utf-8"?>
<Keyboard android:keyWidth="@dimen/split_12_11_8_key_width" android:keyHeight="@dimen/split_default_key_height" android:horizontalGap="@dimen/split_default_key_horizontal_gap" android:verticalGap="@dimen/split_default_key_vertical_gap" android:paddingLeft="@dimen/split_default_padding_left" android:paddingRight="@dimen/split_default_padding_left" android:paddingTop="@dimen/split_default_padding_top" android:paddingBottom="@dimen/split_default_padding_bottom"
  xmlns:android="http://schemas.android.com/apk/res/com.sec.android.inputmethod">
    <Row android:keyWidth="@dimen/split_default_number_key_width" android:keyHeight="@dimen/split_default_number_key_height" android:paddingLeft="@dimen/split_default_left_row0_padding_left" android:rowEdgeFlags="top">
        <include android:keys="@xml/split_default_number_row_left" />
    </Row>
    <Row android:paddingLeft="@dimen/split_12_11_8_left_row1_padding_left">
        <Key android:codes="113" android:popupCharacters="@string/default_umlaut_q" android:keyLabel="q" />
        <Key android:codes="119" android:popupCharacters="@string/default_umlaut_w" android:keyLabel="w" />
        <Key android:codes="101" android:popupCharacters="@string/default_umlaut_e" android:keyLabel="e" />
        <Key android:codes="114" android:popupCharacters="@string/default_umlaut_r" android:keyLabel="r" />
        <Key android:codes="116" android:popupCharacters="@string/default_umlaut_t" android:keyLabel="t" />
        <Key android:codes="122" android:popupCharacters="@string/default_umlaut_z" android:keyLabel="z" />
    </Row>
    <Row android:paddingLeft="@dimen/split_12_11_8_left_row2_padding_left">
        <Key android:codes="97" android:popupCharacters="@string/default_umlaut_a" android:keyLabel="a" />
        <Key android:codes="115" android:popupCharacters="@string/default_umlaut_s" android:keyLabel="s" />
        <Key android:codes="100" android:popupCharacters="@string/default_umlaut_d" android:keyLabel="d" />
        <Key android:codes="102" android:popupCharacters="@string/default_umlaut_f" android:keyLabel="f" />
        <Key android:codes="103" android:popupCharacters="@string/default_umlaut_g" android:keyLabel="g" />
        <Key android:codes="104" android:popupCharacters="@string/default_umlaut_h" android:keyLabel="h" />
    </Row>
    <Row>
        <Key android:keyWidth="@dimen/split_12_11_8_l_shift_key_width" android:codes="-400" android:keyLabel="StrEmpty" />
        <Key android:codes="121" android:popupCharacters="@string/default_umlaut_y" android:keyLabel="y" />
        <Key android:codes="120" android:popupCharacters="@string/default_umlaut_x" android:keyLabel="x" />
        <Key android:codes="99" android:popupCharacters="@string/default_umlaut_c" android:keyLabel="c" />
        <Key android:codes="118" android:popupCharacters="@string/default_umlaut_v" android:keyLabel="v" />
        <Key android:codes="98" android:popupCharacters="@string/default_umlaut_b" android:keyLabel="b" />
    </Row>
    <include android:rows="@xml/split_row_bottom_left" />
</Keyboard>